src/main/docs/raml/examples/errors/userNotFound.raml
 |
  {
       "message" : "User not exists",
       "code" : "Not Found",
       "_links" : {
         "self" : {
           "href" : "http://localhost:8080/users/-1"
         }
       }
     }